--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -134,14 +134,15 @@
             android:text="@string/no_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
         <TextView
-            android:textSize="16sp"
-            android:textColor="@android:color/holo_blue_dark"
+            android:id="@+id/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_toEndOf="@id/no_account"
-            android:id="@+id/register"
             android:text="@string/register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textColor="@android:color/holo_blue_dark"
+            android:textSize="16sp" />
     </RelativeLayout>
 </RelativeLayout>
