--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -27,22 +27,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/txt_logout"
             android:layout_toRightOf="@id/profile_image"
             android:paddingStart="10dp"
             android:textColor="@color/white"
             android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/txt_logout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/border"
-            android:padding="5dp"
-            android:text="Đăng xuất" />
     </RelativeLayout>
 
 
@@ -57,7 +45,7 @@
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
         android:background="@color/gray2"
-        android:visibility="visible"
+        android:visibility="gone"
         android:paddingTop="20dp">
 
         <androidx.appcompat.widget.AppCompatButton
