--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="red">#FF0000</color>
     <color name="gray2">#91A3B0</color>
     <color name="blue">#0A2FB5</color>
+    <color name="blue2">#6C96D6</color>
     <color name="gray">#33B1AFAF</color>
 </resources>
